# project-decomposer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT.md  README.md
.claude-plugin/: marketplace.json
crates/decomposer-cli/: Cargo.toml
crates/decomposer-cli/src/: main.rs
crates/decomposer-core/: Cargo.toml
crates/decomposer-core/src/: engine.rs  lib.rs  manifest.rs  render.rs  session.rs
crates/decomposer-core/src/prompts/: interviewer.md  mod.rs  render_architecture.md  render_claude_md.md  render_file_tree.md  render_prd.md  render_tasks.md
crates/decomposer-core/src/provider/: anthropic.rs  mod.rs  openai.rs
crates/decomposer-core/tests/: engine_loop.rs  session_roundtrip.rs
crates/decomposer-core/tests/common/: mod.rs
plugin/decompose/.claude-plugin/: plugin.json
plugin/decompose/skills/decompose/: SKILL.md
