[workspace]
resolver = "2"
members = [
    "crates/decomposer-core",
    "crates/decomposer-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/bobbi/project-decomposer"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
