[package]
name = "decomposer-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Engine and providers for project-decomposer"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
slug.workspace = true
thiserror.workspace = true
tokio.workspace = true
